--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -5,9 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(178, 229, 255);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+button{
+  cursor: pointer;
+}
+p{
+  margin-top: 25px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
 }
